[package]
name = "n2k-socketcan"
description="Wrapper around the socketcan crate to read and write n2k messages. (Linux only)"
homepage="http://github.com/navalanche/n2k-socketcan"
repository="https://github.com/navalanche/n2k-socketcan"
license="AGPL-3.0"
version = "0.1.0"
authors = ["Erwin Gribnau <erwin@gribnau.org>"]

[dependencies]
n2k-base = "0.3"
socketcan = "1.7"

[patch.crates-io]
n2k-base = { path = "../n2k-base"}
